--- a/src/main/resources/view/workspace.fxml
+++ b/src/main/resources/view/workspace.fxml
@@ -422,7 +422,7 @@
                                  <menus>
                                     <Menu mnemonicParsing="false" text="Plik">
                                        <items>
-                                          <MenuItem fx:id="menuItemNew" mnemonicParsing="false" text="Nowa przedmiot">
+                                          <MenuItem fx:id="menuItemNew" mnemonicParsing="false" text="Nowy przedmiot">
                                              <accelerator>
                                                 <KeyCodeCombination alt="UP" code="N" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
                                              </accelerator>
@@ -550,6 +550,129 @@
                      </children></AnchorPane>
                     </content>
                 </Tab>
+            <Tab fx:id="tabNpcEditor" text="Edytor NPC">
+               <content>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <VBox prefHeight="691.0" prefWidth="1280.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                           <children>
+                              <MenuBar fx:id="menuNpcs" VBox.vgrow="NEVER">
+                                 <menus>
+                                    <Menu mnemonicParsing="false" text="Plik">
+                                       <items>
+                                          <MenuItem fx:id="menuNpcNew" mnemonicParsing="false" text="Nowy skrypt NPC">
+                                             <accelerator>
+                                                <KeyCodeCombination alt="UP" code="N" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
+                                             </accelerator>
+                                          </MenuItem>
+                                          <SeparatorMenuItem mnemonicParsing="false" />
+                                          <MenuItem fx:id="menuNpcOpen" mnemonicParsing="false" text="Otwórz">
+                                             <accelerator>
+                                                <KeyCodeCombination alt="UP" code="O" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
+                                             </accelerator>
+                                          </MenuItem>
+                                          <MenuItem fx:id="menuNpcSave" mnemonicParsing="false" text="Zapisz">
+                                             <accelerator>
+                                                <KeyCodeCombination alt="UP" code="S" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
+                                             </accelerator>
+                                          </MenuItem>
+                                          <MenuItem fx:id="menuNpcSaveAs" mnemonicParsing="false" text="Zapisz jako">
+                                             <accelerator>
+                                                <KeyCodeCombination alt="UP" code="S" control="DOWN" meta="UP" shift="DOWN" shortcut="UP" />
+                                             </accelerator>
+                                          </MenuItem>
+                                       </items>
+                                    </Menu>
+                                    <Menu mnemonicParsing="false" text="Edycja">
+                                       <items>
+                                          <MenuItem fx:id="menuNpcUndo" mnemonicParsing="false" text="Cofnij">
+                                             <accelerator>
+                                                <KeyCodeCombination alt="UP" code="Z" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
+                                             </accelerator>
+                                          </MenuItem>
+                                          <MenuItem fx:id="menuNpcRedo" mnemonicParsing="false" text="Powtórz">
+                                             <accelerator>
+                                                <KeyCodeCombination alt="UP" code="Y" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
+                                             </accelerator>
+                                          </MenuItem>
+                                       </items>
+                                    </Menu>
+                                    <Menu mnemonicParsing="false" text="Zasoby">
+                                       <items>
+                                          <MenuItem fx:id="menuNpcSaveToBundle" disable="true" mnemonicParsing="false" text="Dodaj do zestawu">
+                                             <accelerator>
+                                                <KeyCodeCombination alt="UP" code="E" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
+                                             </accelerator>
+                                          </MenuItem>
+                                       </items>
+                                    </Menu>
+                                 </menus>
+                              </MenuBar>
+                              <GridPane prefHeight="691.0" prefWidth="1280.0" style="-fx-padding: 0em;" VBox.vgrow="ALWAYS">
+                                 <children>
+                                    <AnchorPane prefHeight="200.0" prefWidth="300.0">
+                                       <children>
+                                          <VBox prefHeight="666.0" prefWidth="300.0" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                             <children>
+                                                <ListView fx:id="listNpcList" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS" />
+                                                <AnchorPane maxWidth="1.7976931348623157E308" prefHeight="30.0" VBox.vgrow="NEVER">
+                                                   <children>
+                                                      <TextField fx:id="fieldSearchNpc" disable="true" prefHeight="25.0" prefWidth="164.0" promptText="Szukaj..." />
+                                                      <Button fx:id="buttonAddNewNpc" disable="true" layoutX="174.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="108.0" text="Dodaj nowy" />
+                                                   </children>
+                                                </AnchorPane>
+                                             </children>
+                                             <padding>
+                                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                             </padding>
+                                          </VBox>
+                                       </children>
+                                    </AnchorPane>
+                                    <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowSpan="2">
+                                       <children>
+                                          <VBox layoutX="10.0" layoutY="10.0" prefHeight="676.0" prefWidth="990.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+                                             <children>
+                                                <TitledPane fx:id="titledPaneNpcEditorTitle" animated="false" collapsible="false" maxHeight="1.7976931348623157E308" text="Edytor NPC" VBox.vgrow="ALWAYS">
+                                                   <content>
+                                                      <AnchorPane fx:id="npcEditorHolder" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-padding: 0em;" />
+                                                   </content>
+                                                </TitledPane>
+                                                <HBox>
+                                                   <children>
+                                                      <Button fx:id="buttonDeleteNpc" disable="true" mnemonicParsing="false" prefWidth="130.0" text="Usuń NPC" textFill="RED" HBox.hgrow="NEVER">
+                                                         <font>
+                                                            <Font name="System Bold" size="12.0" />
+                                                         </font>
+                                                         <HBox.margin>
+                                                            <Insets right="5.0" />
+                                                         </HBox.margin>
+                                                      </Button>
+                                                      <Button fx:id="buttonQuickSaveNpc" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Zapisz" HBox.hgrow="ALWAYS" />
+                                                   </children>
+                                                   <VBox.margin>
+                                                      <Insets bottom="5.0" top="10.0" />
+                                                   </VBox.margin>
+                                                </HBox>
+                                             </children>
+                                          </VBox>
+                                       </children>
+                                    </AnchorPane>
+                                 </children>
+                                 <columnConstraints>
+                                    <ColumnConstraints fillWidth="false" hgrow="NEVER" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="300.0" />
+                                    <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" />
+                                 </columnConstraints>
+                                 <rowConstraints>
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
+                                    <RowConstraints />
+                                 </rowConstraints>
+                              </GridPane>
+                           </children>
+                        </VBox>
+                     </children>
+                  </AnchorPane>
+               </content>
+            </Tab>
             </tabs>
         </TabPane>
     </children>
